@@ -77,6 +77,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #26804: urllib will prefer lower_case proxy environment variables over
+  UPPER_CASE or Mixed_Case ones. Patch contributed by Hans-Peter Jansen.
+
 - Issue #26837: assertSequenceEqual() now correctly outputs non-stringified
   differing items.  This affects assertListEqual() and assertTupleEqual().
 
